--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto:500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -26,8 +26,10 @@
 
 <body>
 
+
+
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="index.html"><span class="go">Go</span>Belfast</a>
+    <a class="navbar-brand" href="index.html"><span class="go">go</span>belfast</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -49,18 +51,21 @@
         <li class="nav-item">
           <a class="nav-link" href="info.html">INFO</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+        </li>
       </ul>
     </div>
   </nav>
 
   <div class="container-fluid top-img" ;>
-    <img src="images/experience-img.jpg" class="img-fluid do-img" alt="Experience-Image">
+    <img src="images/experience-original.jpeg" class="img-fluid do-img" alt="Experience-Image">
   </div>
 
   <section id="content">
 
     <div class="container-fluid intro">
-      <h3 class="intro-header">Things to see and do in Belfast</h3>
+      <h3 class="intro-header">THINGS TO SEE AND DO IN BELFAST</h3>
       <p class="intro-paragraph">Whether you're seeking history, culture, or just good fun...These experiences are a must do while you are in Belfast!</p>
     </div>
 
@@ -72,7 +77,7 @@
         <div class="card">
           <img src="images/gaol.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Crumlin Road Gaol</h5>
+            <h5 class="card-title">CRUMLIN ROAD GAOL</h5>
             <p class="card-text">Since it opened in 1846, Crumlin Road Gaol imprisoned a whole range of historic figures, from Éamon de Valera to the Reverend Ian Paisley, and from suffragette Dorothy Evans to the 'Shankill Butcher' murderer Lenny
               Murphy. 'The Crum' was also the scene of 17 executions between 1854 and 1961. It remained a working prison until
               1996....Tours operate daily from 10am, Monday to Sunday.</p>
@@ -87,7 +92,7 @@
         <div class="card">
           <img src="images/museum.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Ulster Museum</h5>
+            <h5 class="card-title">ULSTER MUSEUM</h5>
             <p class="card-text">The Ulster Museum tells the unique human story of this part of Ireland and our collections will take you to all corners of the globe. Come face to face with dinosaurs, get up close with an Egyptian mummy, dive into
               our discovery zones,
               or just enjoy a bite in our café or a wander around the gift shop. Plenty to enjoy and loads to love at the Ulster Museum. And best of all, admission is free.</p>
@@ -101,7 +106,7 @@
         <div class="card">
           <img src="images/titanic.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Titanic Belfast</h5>
+            <h5 class="card-title">TITANIC MUSEUM</h5>
             <p class="card-text">The Titanic experience takes you through nine galleries, telling the story of RMS Titanic, from her conception in Belfast in the early 1900s, through her construction and launch, to her famous maiden voyage and
               tragic end. The
               galleries
@@ -118,7 +123,7 @@
         <div class="card">
           <img src="images/botanic.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Botanic Gardens</h5>
+            <h5 class="card-title">BOTANIC GARDENS</h5>
             <p class="card-text">Located in South Belfast, situated between Queen's University & the Ulster Museum, this beautiful public garden is a popular spot for students, locals and tourists a like!</p>
             <div class="buttons">
               <a href="https://www.crumlinroadgaol.com/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
@@ -130,7 +135,7 @@
         <div class="card">
           <img src="images/causeway.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Game of Thrones & Giant's Causeway Tour</h5>
+            <h5 class="card-title">GAME OF THRONES & GIANT'S CAUSEWAY TOUR</h5>
             <p class="card-text">Northern Ireland is the Home of Thrones. The popular TV series Game of Thrones® was filmed in Belfast and across Northern Ireland. Our rugged coast lines, historic castles and breathtaking scenery are the perfect
               setting for this
               epic
@@ -146,7 +151,7 @@
         <div class="card">
           <img src="images/bus.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Hop-On Hop-Off Bus Tour</h5>
+            <h5 class="card-title">HOP-ON HOP-OFF BUS TOUR</h5>
             <p class="card-text">The Belfast City Sightseeing Hop-on / Hop-off Open-top bus tour provides you with a comprehensive look at Belfast city and allows you to explore every area and district of this unique place. The tour operates seven
               days per week and lasts approx 1 hour 30 minutes.</p>
             <div class="buttons">
@@ -160,7 +165,7 @@
         <div class="card">
           <img src="images/peace-wall.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Political Murals & Peace Walls Tour</h5>
+            <h5 class="card-title">POLITICAL MURALS & PEACE WALL TOURS</h5>
             <p class="card-text">Belfast's infamous black taxi tour. See the political murals of the Falls and the Shankill which tell their own graphic story of what has been called "The Troubles" in Ireland's recent history. Visit the Peaceline, a
               wall built to keep Nationalists and Loyalists apart and in the process divided the communities.</p>
             <div class="buttons">
@@ -173,7 +178,7 @@
         <div class="card">
           <img src="images/opera-house.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Grand Opera House</h5>
+            <h5 class="card-title">GRAND OPERA HOUSE</h5>
             <p class="card-text">Northern Ireland's premier theatre presenting an outstanding programme of drama, opera, dance, comedy, musicals, family shows and much more. The Grand Opera House is located in Belfast's bustling city centre and
               boasts the majestic Victorian main auditorium designed by renowned architect Frank Matcham, the intimate Baby Grand studio, a 100-seat theatre space, and three bars.
 
@@ -188,7 +193,7 @@
         <div class="card">
           <img src="images/market.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">St. George's Market</h5>
+            <h5 class="card-title">ST. GEORGE'S MARKET</h5>
             <p class="card-text">St George’s Market is one of Belfast’s oldest attractions. It was built between 1890 and 1896 and is one of the best markets in the UK and Ireland. It has been selected for numerous local and national titles and
               awards for its fresh, local produce and great atmosphere. It holds a weekly Friday Variety Market, the City Food and Craft Market on Saturdays and the Sunday Market. It also hosts a range of events throughout the year.</p>
             <div class="buttons">
