--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -29,7 +30,7 @@
   <section id="title">
 
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><span class="go">Go</span>Belfast</a>
+      <a class="navbar-brand" href="index.html"><span class="go">go</span>belfast</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,17 +52,20 @@
           <li class="nav-item">
             <a class="nav-link" href="info.html">INFO</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+          </li>
         </ul>
       </div>
     </nav>
 
     <div class="container-fluid top-img" ;>
-      <img src="images/homepage-img.jpg" class="img-fluid" alt="Homepage-Image">
+      <img src="images/top-images/homepage-original.jpeg" class="img-fluid" alt="Homepage-Image">
     </div>
 
     <div class="container welcome-container";>
 
-      <h3>Welcome to Belfast</h3>
+      <h3>WELCOME TO BELFAST</h3>
       <p class="welcome-paragraph">So you want to know what to do? What to see? Where to eat, drink and sleep in this vibrant, energetic city? We've got you covered... This is the place to find out about all things Belfast.</p>
       <img class="img-fluid belfast-logo" src="images/belfast-logo.svg" alt="">
     </div>
