--- a/nightlife.html
+++ b/nightlife.html
@@ -9,7 +9,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto:500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="index.html"><span class="go">Go</span>Belfast</a>
+    <a class="navbar-brand" href="index.html"><span class="go">go</span>belfast</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -49,18 +49,138 @@
         <li class="nav-item">
           <a class="nav-link" href="info.html">INFO</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+        </li>
       </ul>
     </div>
   </nav>
 
 
 
-    <div class="container-fluid top-img" ;>
-      <img src="images/nightlife-img.jpg" class="img-fluid do-img" alt="Nightlife-Image">
+  <div class="container-fluid top-img" ;>
+    <img src="images/top-images/nightlife-original.jpeg" class="img-fluid do-img" alt="Nightlife-Image">
+  </div>
+
+  <section id="content">
+
+    <div class="container-fluid intro">
+      <h3 class="intro-header">FANCY A NIGHT OUT ON THE TOWN?</h3>
+      <p class="intro-paragraph">We've got historic old pubs, sunny rooftop terraces, live music bars and much more. Get to know the best bars in Belfast with our top 10 list below!</p>
     </div>
 
 
-  
+    <!-- Cards -->
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/duke.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">DUKE OF YORK</h5>
+            <p class="card-text">Nestled along a narrow, cobbled alleyway in the historic Half Bap area, The Duke offers a traditional Belfast welcome of craic, music and humour in contrast to the modern, fashionable establishments currently blowing
+              into the surrounding streets. Discover live music from Thursday - Sunday; traditional, acoustic and rock. In 1998, internationally-acclaimed Northern Irish band Snow Patrol played their first gig in the bar.
+
+              The extensive smoking area outside is festooned with award-winning flowers and plants.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/laverys.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">LAVERYS</h5>
+            <p class="card-text">Lavery's is Belfast's oldest family-owned pub, at the heart of the city's social life for almost 100 years. Perfectly located a short distance from both the city centre and the vibrant Queen's Quarter, it's a
+              versatile, lively entertainment venue with the charm of a traditional Irish pub. Behind the unassuming street façade lies a grand total of four bars, two roof gardens, a street-level beer garden, an independent off licence and Northern
+              Ireland's largest pool room.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/berts.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">BERT'S JAZZ BAR</h5>
+            <p class="card-text">Transport yourself back to the Art Deco glamour of 1930’s New York and the Jazz Age in Belfast’s only dedicated Jazz bar and restaurant: Berts Bar at The Merchant Hotel. Berts offers live jazz seven nights a week from
+              9pm as well as perfectly relaxed weekends complete with delicious brunch and all day dining menus from 11am and a live jazz pianist from 12pm to 2pm.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/kellys.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">KELLY'S CELLARS</h5>
+            <p class="card-text">Built in 1720 Kelly's Cellars is Belfast's oldest pub. Situated in the heart of Belfast's city centre, this pub has maintained the friendly atmosphere of over 250 years ago. With a long tradition of quality beer and
+              fine food, Kelly's Cellars offers all customers a chance to enjoy the perfect pint of Guinness or the traditional Irish fare.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/crown.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">THE CROWN BAR</h5>
+            <p class="card-text">The Crown Liquor Saloon in Belfast - you won't find another like it. Step in to discover a traditional pub of unique character, revered for its eclectic range of real ales and its heartily classic pub food, which are
+              served, as they should be, with a generous measure of famous Irish hospitality.The Crown Liquor Saloon is one of many rare gems in the Nicholson's collection of great pubs, reputed for their distinctive buildings, intriguing history and
+              vibrant atmosphere.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/dirtyonion.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">THE DIRTY ONION</h5>
+            <p class="card-text">A modern take on a traditional Irish pub, The Dirty Onion's novel partnership with multi-award winning cultural centre, An Droichead, delivers a varied music programme in the outlet seven nights a week. From open
+              workshops in singing and various traditional instruments, to sessions with the highest quality traditional musicians – there is something for participators and spectators alike every night in The Dirty Onion.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/perch.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PERCH ROOFTOP BAR</h5>
+            <p class="card-text">Belfast's original rooftop bar and winner of the coveted ‘Best Outdoor Space’ category at the LCN awards, The Perch is located in the historic Linen Quarter, beside sister bars Rita's, Sweet Afton and Tutti Frutti.
+
+              Enjoy cocktails and sangria in the height of summer and hot cider, winter warmers and blankets in the winter.
+
+              Located on the fifth floor of the historic Linenhouse Building, The Perch Rooftop Bar is a space like no other in Belfast. It has a beautiful central bar, surrounded by original window features, brick-clad walls and generously adorned
+              with birdcages and all things avian, in honour of the bar’s namesake.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/spaniard.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">THE SPANIARD</h5>
+            <p class="card-text">The Spaniard Bar was established in 2006 and has grown in reputation. Hidden in the depths of the Cathedral Quarter, be careful not to miss out. Providing a cosy, intimate atmosphere once you enter it becomes hard to
+              exit. Attracting a collaboration of interesting folk do not be surprised if you end up meeting a cousin/friend/relative twice removed, or even chatting to a stranger who becomes a new friend for life.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <img src="images/nightlife-images/whites.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">WHITE'S TAVERN</h5>
+            <p class="card-text">Built in 1630, Whites Tavern serves a great selection of Irish and traditional food, beers and of course, Guinness. They host live music every weekend including traditional Irish from local musicians with no cover
+              charge.
+
+              Above Whites, Vandal is Belfast’s only dedicated geek and movie bar. Vandal is also a licensed cinema and we host regular cinema events along with other great events throughout the year. Apart from great pizzas, milkshakes and
+              cocktails, you will also find board games and video games in Vandal.
+
+              Both venues are family friendly.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+
 
 
   <section id="footer">
