--- a/stay.html
+++ b/stay.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto:500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -25,7 +25,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><span class="go">Go</span>Belfast</a>
+      <a class="navbar-brand" href="index.html"><span class="go">go</span>belfast</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,13 +47,143 @@
           <li class="nav-item">
             <a class="nav-link" href="info.html">INFO</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+          </li>
         </ul>
       </div>
     </nav>
 
     <div class="container-fluid top-img" ;>
-      <img src="images/stay-img.jpg" class="img-fluid do-img" alt="Stay-Image">
+      <img src="images/top-images/stay-original.jpeg" class="img-fluid do-img" alt="Stay-Image">
     </div>
+
+    <section id="content">
+
+      <div class="container-fluid intro">
+        <h3 class="intro-header">FANCY A NIGHT OUT ON THE TOWN?</h3>
+        <p class="intro-paragraph">We've got historic old pubs, sunny rooftop terraces, live music bars and much more. Get to know the best bars in Belfast with our top 10 list below!</p>
+      </div>
+
+
+      <!-- Cards -->
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/gaol.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">DUKE OF YORK</h5>
+              <p class="card-text"></p>
+              <div class="buttons">
+                <a href="https://www.crumlinroadgaol.com/gaol-tours/visitor-information/opening-hours-prices/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-ticket-alt"></i> Buy Tickets</button></a>
+                <a href="https://www.crumlinroadgaol.com/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/museum.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">LAVERYS</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="https://www.nmni.com/our-museums/ulster-museum/Home.aspx" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/titanic.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">BERT'S JAZZ BAR</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="https://tickets.titanicbelfast.com/?_ga=2.260852941.1924986959.1561851689-182301069.1561416914" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-ticket-alt"></i> Buy Tickets</button></a>
+                <a href="https://titanicbelfast.com/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/botanic.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">KELLY'S CELLARS</h5>
+              <p class="card-text"></p>
+              <div class="buttons">
+                <a href="https://www.crumlinroadgaol.com/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/causeway.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">THE CROWN BAR</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="https://britmovietours.com/bookings/game-of-thrones-tour-of-locations-belfast/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-ticket-alt"></i> Buy Tickets</button></a>
+                <a href="https://britmovietours.com/bookings/game-of-thrones-tour-of-locations-belfast/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/bus.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">THE DIRTY ONION</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="https://belfastcitysightseeing.com/belfast-city-sightseeing-tour/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-ticket-alt"></i> Buy Tickets</button></a>
+                <a href="https://belfastcitysightseeing.com/belfast-city-sightseeing-tour/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/peace-wall.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PERCH</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="http://belfastblackcabtours.co.uk/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/opera-house.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">THE SPANIARD</h5>
+              <p class="card-text"></p>
+              <div class="buttons">
+                <a href="https://www.goh.co.uk/whats-on/" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-theater-masks"></i> What's On</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <img src="images/market.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">WHITE'S TAVERN</h5>
+              <p class="card-text">
+                <div class="buttons">
+                <a href="https://www.belfastcity.gov.uk/tourism-venues/stgeorgesmarket/stgeorgesmarket-about.aspx" button type="button" class="btn btn-outline-info btn-sm"><i class="fas fa-info-circle"></i> More Info</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
 
     <section id="footer">
 
