--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto:500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -25,7 +25,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><span class="go">Go</span>Belfast</a>
+      <a class="navbar-brand" href="index.html"><span class="go">go</span>belfast</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,12 +47,15 @@
           <li class="nav-item">
             <a class="nav-link" href="info.html">INFO</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+          </li>
         </ul>
       </div>
     </nav>
 
     <div class="container-fluid top-img" ;>
-      <img src="images/info-img.jpg" class="img-fluid do-img" alt="Info-Image">
+      <img src="images/traveller-info-original.jpeg" class="img-fluid do-img" alt="Info-Image">
     </div>
 
     <section id="footer">
